Fixed #9988, refactoring,  scrollbars were hidden in popup.

--- a/css/annotations/popup.scss
+++ b/css/annotations/popup.scss
@@ -31,9 +31,10 @@ $button-hover-color: #e6ebf5;
   display: none;
   font-size: 0.876em;
   max-height: 90%;
-  height: 90%;
   top: 5%;
   left: 15%;
+  overflow-x: hidden;
+  overflow-y: scroll;
   width: 75%;
   min-width: 300px;
   max-width: 600px;
